--- a/Prototyp/Views/Event.cshtml
+++ b/Prototyp/Views/Event.cshtml
@@ -16,7 +16,7 @@
                     @Html.TextBox("eventName", null, new { @class = "input", type = "text" })
                     <br />
                     <label class="input-label">Date:</label>
-                    @Html.TextBox(Model.date.ToString("dd/MM/yyyy"), null, new { @class = "input", type = "date" })
+                    @Html.TextBox(ViewBag.VarEvent.date.ToString("dd/MM/yyyy") as String, null, new { @class = "input", type = "date" })
                     <br />
 
 
@@ -52,12 +52,7 @@
                     @Html.TextBox("location", "", new { @class = "input", type = "text" })
                     <br />
                     <label for="startNoSet" class="input-label">Start No Set:</label>
-                    @Html.DropDownList("numberSet", new List<SelectListItem>
-                                          {
-                                            new SelectListItem { Text = "Set A", Value = "1"},
-                                            new SelectListItem { Text = "Set B", Value = "2"},
-                                            new SelectListItem { Text = "Set C", Value = "3"}
-                                          }, "Set Name", new { @class = "input" })
+                    @*@Html.DropDownList("NumberSets", ViewBag.NumberSets as List<SelectListItem>, "Select NumberSets", new { @class = "form-control input" })*@
 
                     <br />
                     <p style="padding-top: 50px;">Clubs participating</p>
