--- a/Prototyp/Views/Athlete.cshtml
+++ b/Prototyp/Views/Athlete.cshtml
@@ -51,18 +51,15 @@
                 </div>
 
                 <div class="empty"></div>
-                <div class="empty"></div>
-                <div class="empty"></div>
-                <div class="empty"></div>
+
                 <div class="empty"></div>
                 <div class="empty"></div>
                 <div class="empty"></div>
 
                 <div style="text-align: right;">
-                    <button type="submit">
+                    <a href="/Athlete/Save">
                         <img src="~/Content/Pictures/Save.PNG" class="pageButton">
-                    </button>
-
+                    </a>
 
                     <a href="/Athlete/Cancle">
                         <img src="~/Content/Pictures/Cancle.PNG" class="pageButton">
