--- a/Prototyp/Views/Event.cshtml
+++ b/Prototyp/Views/Event.cshtml
@@ -13,7 +13,7 @@
                 <hr />
                 <div class="controlForm">
                     <label class="input-label">Date:</label>
-                    @Html.TextBox(ViewBag.date.ToString("dd/MM/yyyy") as String, null, new { @class = "input", type = "date" })
+                    @*@Html.TextBox(ViewBag.date.ToString("dd/MM/yyyy") as String, null, new { @class = "input", type = "date" })*@
                     <br />
 
 
@@ -39,7 +39,7 @@
             </div>
             <div class="pageRight">
                 <div class="chooseItem search-field">
-                    @Html.DropDownList("Events", ViewBag.Events as List<SelectListItem>, "Select Event", new { @class = "form-control search-field input" })
+                    @*@Html.DropDownList("Events", ViewBag.Events as List<SelectListItem>, "Select Event", new { @class = "form-control search-field input" })*@
 
                 </div>
 
